crates/nlink-macros/tests/ui/fail/03_missing_discriminants.rs
use nlink_macros::GenlCommand;

#[derive(GenlCommand)]
#[genl_command(repr = "u8")]
pub enum AnonymousDiscriminants {
    A,
    B,
}

fn main() {}
